Fix zoom icon persisting in inactive window

This CL updates the zoom icon visibility logic to only pay attention to
zoom bubbles that are connected to the same browser window the icon is in.

Bug: 900134
Change-Id: I7aedb32b450b1b51aed602671fe3b2fb8946960e
Reviewed-on: https://chromium-review.googlesource.com/c/1309385
Commit-Queue: Alan Cutter <alancutter@chromium.org>
Reviewed-by: calamity <calamity@chromium.org>
Cr-Commit-Position: refs/heads/master@{#615025}
Former-commit-id: 9c58cb2c0ede899a3aa7b7808131044e4db69df0